# p5_migration_mongodb

./: .gitignore  Dockerfile  README.md  docker-compose.yml  insert_data.py  pyproject.toml
tests/: test_insert_data.py
